syntax = "proto3";
package rpc.paymentprocessor.v1;
option go_package = "github.com/jacktantram/build/go/rpc/paymentprocessor/v1";


import "shared/amount/v1/money.proto";
import "shared/payment/v1/payment.proto";


// Request used to create a Refund on a payment method.
message CreateRefundRequest{
    // The ID returned in the authorization request.
    string payment_id = 1;
    // The amount to refund against the payment method.
    shared.amount.v1.Money amount = 2;
}

// Response returned from a successful Refund.
message CreateRefundResponse{
    // the updated payment.
    shared.payment.v1.Payment payment= 1;
}